--- a/geof.css
+++ b/geof.css
@@ -38,15 +38,78 @@
     border-radius: 25px;
     border: 10px solid rgb(195, 151, 196);
     height: 40px;
-    left: 450px;
+    left: 470px;
     position: fixed;
     top: 8px;
     background-color: rgb(255, 255, 255);
     z-index: 3;
     padding: 5px;
-    color: purple;
+    color: rgb(77, 28, 92);
     font-family: monospace;
-    font-size: 34px;
+    font-size: 25px;
+    text-align: center;
+
     
 }
+.instructions{
+    width: 185px;
+    border-radius: 25px;
+    border: 10px solid rgb(195, 151, 196);
+    height: 150px;
+    left: 470px;
+    position: fixed;
+    top: 90px;
+    background-color: rgb(255, 255, 255);
+    z-index: 3;
+    padding: 5px;
+    color: rgb(77, 28, 92);
+    font-family: monospace;
+    font-size: 25px;
+    text-align: center;
+}
+#timer{
+    width: 185px;
+    border-radius: 25px;
+    border: 10px solid rgb(195, 151, 196);
+    height: 50px;
+    left: 470px;
+    position: fixed;
+    top: 363px;
+    background-color: rgb(255, 255, 255);
+    z-index: 3;
+    padding: 5px;
+    color: purple;
+    font-family: monospace;
+    font-size: 26px;
+    text-align: center;
 
+}
+#misses{
+    width: 185px;
+    border-radius: 25px;
+    border: 10px solid rgb(195, 151, 196);
+    height: 50px;
+    left: 470px;
+    position: fixed;
+    top: 277px;
+    background-color: rgb(255, 255, 255);
+    z-index: 3;
+    padding: 5px;
+    color: purple;
+    font-family: monospace;
+    font-size: 26px;
+    text-align: center;
+
+}
+
+#support{
+    width: 434px;
+    position:absolute;
+    top: 197px;
+    background-color: rgba(77, 28, 92, 0.477);
+    color: white;
+    font-size: 45px;
+    font-family: monospace;
+    z-index: 6;
+    text-align: center;
+}
